--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <p>Hello</p>
+    <h1>Hi!</h1>
+    <h2>What</h2>
     <!-- <script>     
         alert(1)
     </script> --> <!--2. подключение JS -->
