--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         alert(1)
     </script> --> <!--2. подключение JS -->
 
-    <script src="JS/script.js"></script> <!--1. подключение JS -->
+    <script src="JS/script.js" type='module'></script> <!--1. подключение JS --> <!-- type='module' - модуль в который мы оборачиваем код чтобы он не конфликтовал с кодом в других подключенные файлах JS-->
 </body>
 </html>
